<?xml version="1.0"?>
<package format="2">
  <name>kitchen_description</name>
  <version>0.0.0</version>
  <description>The kitchen_description package</description>

  <maintainer email="ceppner@nvidia.com">Clemens Eppner</maintainer>

  <license>(c) Nvidia Corp</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
